force/src/objects/Application_Inventory__c.object
<CustomObject>
    <description>TOOLKIT: Provides application component detailed related to customer requests.</description>
    <fields>
        <fullName>Build_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Build_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Complete__c</fullName>
        <label>Build % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Build_Description__c</fullName>
        <inlineHelpText>Should include the following details:
  - Field Name
  - Field Type
  - Picklist values
  - Page Layout (location on the page, required, read only, etc.)
  - Record Type
  - Custom code details</inlineHelpText>
        <label>Build Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Feedback__c</fullName>
        <label>Build Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Build_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories (Build Owner)</relationshipLabel>
        <relationshipName>Application_Inventories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_1__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_1__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Very Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity_2__c</fullName>
        <label>Complexity_2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Very Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Design_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Complete__c</fullName>
        <label>Design % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories</relationshipLabel>
        <relationshipName>Application_Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Help_Error_Text__c</fullName>
        <label>Help / Error Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Inventory1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Application Inventories</relationshipLabel>
        <relationshipName>Application_Inventories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Review_Complete__c</fullName>
        <label>Review % Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reviewer_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIT_Complete__c</fullName>
        <label>SIT % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SIT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIT Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories (SIT Owner)</relationshipLabel>
        <relationshipName>Application_Inventories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Test_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Build__c</fullName>
        <formula>Build_1__c  +  Build_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Design__c</fullName>
        <formula>Design_1__c + Design_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Test__c</fullName>
        <formula>Test_1__c + Test_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflow or Approval</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration (Real-Time)</fullName>
                </value>
                <value>
                    <fullName>Integration (Batch)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type_2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflow or Approval</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration (Real-Time)</fullName>
                </value>
                <value>
                    <fullName>Integration (Batch)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Inventory</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Application Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>